Type issues and auto phone number linking on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -110,6 +110,13 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
   border-radius: 8px;
 }
 
+#header .box a {
+  color: #FFD524;
+  font-weight: 700;
+  font-size: 32px; 
+  font-size: 3.2rem; 
+}
+
 #header h2 {
   color: #fff;
   font-weight: 400;
@@ -267,7 +274,15 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
 }
 
 #call h2 {
-  font-family: DroidSans-Bold;
+  font-family: "DroidSans-Bold";
+  font-size: 32px;
+  color: #FFD524;
+  line-height: 38px;
+  text-align: center;
+}
+
+#call h2 a {
+  font-family: "DroidSans-Bold";
   font-size: 32px;
   color: #FFD524;
   line-height: 38px;
